--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -37,19 +38,29 @@ body {
           align-items: center;
 }
 
+ul {
+  padding: 0;
+  list-style: none;
+}
+
 .card {
   background: #020024;
   background: -webkit-gradient(linear, left bottom, left top, from(#020024), color-stop(0%, #005ed8), to(#33d3f8));
   background: linear-gradient(0deg, #020024 0%, #005ed8 0%, #33d3f8 100%);
   max-width: 600px;
   min-width: 320px;
-  padding: 4rem;
+  padding: 3rem;
   border-radius: .8rem;
+  -webkit-box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
+          box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
+  min-height: 750px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
-          box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .card h1, .card h4 {
@@ -64,9 +75,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 21rem;
+          flex: 0 0 21rem;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -81,7 +92,7 @@ body {
 }
 
 .card .card-header .temperture h1::after {
-  content: "\2109";
+  content: "°";
 }
 
 .card .card-header .temperture > span {
@@ -90,7 +101,7 @@ body {
 }
 
 .card .card-header .temperture span:nth-last-child(2)::after {
-  content: "\2109";
+  content: "°";
 }
 
 .card .card-header .temperture .location {
@@ -107,5 +118,46 @@ body {
 
 .card .card-header .weather-logo {
   margin-left: 4rem;
+}
+
+.card .day {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.card .day > .report {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.card .day > .report .current, .card .day > .report .time {
+  text-align: center;
+  margin-top: 0.5rem;
+}
+
+.card .day > .report .current {
+  color: #fff;
+  font-size: 1.1rem;
+}
+
+.card .day > .report .current span::after {
+  content: "°";
+}
+
+.card .day > .report .time {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.card .day > .report img {
+  width: 70%;
 }
 /*# sourceMappingURL=main.css.map */
