layout for weather card complete

--- a/public/styles/modules/_base.scss
+++ b/public/styles/modules/_base.scss
@@ -10,6 +10,11 @@ body{
     align-items: center;
 }
 
+.container{
+    max-width: 700px;
+    margin: 0 auto auto auto;
+}
+
 ul{
     padding: 0;
     list-style: none;
