--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -38,6 +38,11 @@ body {
           align-items: center;
 }
 
+.container {
+  max-width: 700px;
+  margin: 0 auto auto auto;
+}
+
 ul {
   padding: 0;
   list-style: none;
@@ -47,9 +52,8 @@ ul {
   background: #020024;
   background: -webkit-gradient(linear, left bottom, left top, from(#020024), color-stop(0%, #005ed8), to(#33d3f8));
   background: linear-gradient(0deg, #020024 0%, #005ed8 0%, #33d3f8 100%);
-  max-width: 600px;
   min-width: 320px;
-  padding: 3rem;
+  padding: 7rem 3rem;
   border-radius: .8rem;
   -webkit-box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
           box-shadow: 10px 9px 26px -7px rgba(0, 0, 0, 0.15);
@@ -61,6 +65,8 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 10rem;
+  margin-bottom: 20rem;
 }
 
 .card h1, .card h4 {
@@ -124,9 +130,9 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 8.5em;
+          flex: 0 0 8.5em;
 }
 
 .card .day > .report {
@@ -159,5 +165,70 @@ ul {
 
 .card .day > .report img {
   width: 70%;
+}
+
+.card .daily {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  font-size: 24px;
+}
+
+.card .daily img {
+  width: 40px;
+}
+
+.card .daily .day-line {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem;
+}
+
+.card .daily .day-line .week-day {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  color: #fff;
+}
+
+.card .daily .day-line .image {
+  padding-right: 2.0rem;
+}
+
+.card .daily .day-line .temp-range span:nth-child(1) {
+  color: #fff;
+}
+
+.card .daily .day-line .temp-range span:nth-child(1)::after {
+  content: "°";
+}
+
+.card .daily .day-line .temp-range span:nth-child(2) {
+  color: #fff;
+}
+
+.card .daily .day-line .temp-range span:nth-child(3) {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.card .daily .day-line .temp-range span:nth-child(3)::after {
+  content: "°";
 }
 /*# sourceMappingURL=main.css.map */
