--- a/public/styles/modules/_base.scss
+++ b/public/styles/modules/_base.scss
@@ -2,6 +2,16 @@ body{
     height: 100vh;
     font-family: 'Montserrat', sans-serif;
 }
+*,
+*:after,
+*:before {
+  @include box-sizing(inherit);
+}
+
+html{
+    @include box-sizing(border-box);
+    height: 100%;
+}
 
 .main-content{
     display: flex;
@@ -12,10 +22,15 @@ body{
 
 .container{
     max-width: 700px;
-    margin: 0 auto auto auto;
+    margin: 0 auto;
 }
 
 ul{
     padding: 0;
     list-style: none;
+}
+.input{
+    height:50px;
+    width: 70%;
+    border-radius: 10px;
 }
