--- a/public/styles/modules/_card.scss
+++ b/public/styles/modules/_card.scss
@@ -2,7 +2,7 @@
     background: rgb(2,0,36);
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,94,216,1) 0%, rgba(51,211,248,1) 100%);
    
-    min-width: 320px;
+   
     padding: 7rem 3rem;
     border-radius: .8rem;
     box-shadow: 10px 9px 26px -7px rgba(0,0,0,0.15);
@@ -17,7 +17,7 @@
     }
 
     img{
-        width: 300px;
+        width: 80%;
 
     }
   
@@ -45,9 +45,16 @@
              
              background-color: $white-faded;
              margin-top: 2.5rem;
-             padding: .9rem;
+             padding: 1.0rem .5rem;
              border-radius: 0.8rem;
-             font-size: 1.7rem;
+             font-size: 1.5rem;
+             cursor: pointer;
+             @include transitions(.3s,ease-out);
+             &:hover{
+              background-color: rgba(0,0,0,0.15);
+              font-size: 1.0rem;
+            
+             }
              span{
                  margin-left:.7rem; 
              }
