--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,5 @@
 @import './modules/side.scss';
 @import './modules/base.scss';
 @import './modules/card';
+
+@import url('https://fonts.googleapis.com/css?family=Oxygen:300,700&display=swap');
