--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,6 +77,60 @@ header .weather .weather-header .summary {
   font-size: 25px;
 }
 
+.sub-header {
+  background-color: #2560ad;
+  padding: .5rem 0;
+}
+
+.sub-header .image-icon {
+  height: 40px;
+  width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sub-header .sub-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.sub-header .sub-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sub-header .sub-icons .time {
+  padding: .5rem 0;
+  color: #fff;
+}
+
+.sub-header .sub-icons .small-temp {
+  color: #fff;
+}
+
 body {
   height: 100vh;
   font-family: 'Oxygen', sans-serif;
@@ -112,6 +166,12 @@ html {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .container {
@@ -325,5 +385,18 @@ ul {
 
 .card .daily .day-line .temp-range span:nth-child(3)::after {
   content: "°";
+}
+
+.hourly .weather-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hourly .weather-list h2 {
+  margin: 0;
 }
 /*# sourceMappingURL=main.css.map */
