--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,5 +5,6 @@
 @import './modules/side.scss';
 @import './modules/base.scss';
 @import './modules/card';
+@import './modules/home';
 
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,700&display=swap');
