--- a/src/styles/modules/_base.scss
+++ b/src/styles/modules/_base.scss
@@ -17,10 +17,14 @@ html{
     display: flex;
     flex-direction: column;
   
+  
 }
 .child-content{
     display: flex;
     flex:1
+}
+.content{
+    display: flex;
 }
 
 .container{
