--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -149,6 +149,10 @@ html {
   height: 100%;
 }
 
+h1, h2, h4, h5, h6 {
+  margin: 0;
+}
+
 .main-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -387,16 +391,79 @@ ul {
   content: "°";
 }
 
-.hourly .weather-list {
+.daily {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-.hourly .weather-list h2 {
-  margin: 0;
+.daily .daily-list {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 1rem;
+}
+
+.daily .weather-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-bottom: 1rem;
+}
+
+.daily .weather-list .small-icon {
+  width: 40px;
+  margin: .8rem 1.5rem 0 0;
+}
+
+.daily .weather-list .weather-list-title {
+  text-align: left;
+  width: 200px;
+}
+
+.daily .weather-list .temp-range {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.daily .details {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 1rem;
+}
+
+.daily .details h1 {
+  text-align: center;
+  margin-top: .7rem;
+}
+
+.daily .details .daily-chart {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+}
+
+.daily .details .daily-chart .avg-temps {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.daily .details .daily-chart .avg-temps .degree::after {
+  content: "\00B0";
 }
 /*# sourceMappingURL=main.css.map */
