--- a/src/styles/modules/_base.scss
+++ b/src/styles/modules/_base.scss
@@ -12,6 +12,9 @@ html{
     @include box-sizing(border-box);
     height: 100%;
 }
+h1,h2,h4,h5,h6{
+    margin: 0;
+}
 
 .main-content{
     display: flex;
