--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,8 +7,7 @@ header {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-color: #99ddee;
-  height: 400px;
+  height: 500px;
 }
 
 header nav {
@@ -19,6 +18,42 @@ header nav {
       -ms-flex-pack: end;
           justify-content: flex-end;
   margin-top: 1rem;
+}
+
+header nav .search-box {
+  height: 40px;
+  border-radius: 40px;
+  background: #2f3640;
+  padding: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+header .loader_parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 50vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+header .loader_parent .weather_loader {
+  margin-bottom: 30px;
+}
+
+header .loader_parent .loader-text {
+  font-size: 20px;
+  color: blanchedalmond;
 }
 
 header .weather {
