--- a/src/styles/modules/_base.scss
+++ b/src/styles/modules/_base.scss
@@ -1,6 +1,8 @@
 body{
     height: 100vh;
     font-family: 'Oxygen', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 *,
 *:after,
@@ -29,6 +31,8 @@ h1,h2,h4,h5,h6{
 }
 .content{
     display: flex;
+    background-color: rgb(15, 28, 48);
+    color:$white;
 }
 
 .container{
