--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -4,16 +4,52 @@ header{
   
     height: 500px; 
     nav{
-        display: flex;
-        justify-content: flex-end;
+      
         margin-top:1rem;
+        position: relative;
         .search-box{
-
-            height: 40px;
+ 
+            height:40px;
             border-radius: 40px;
             background: #2f3640;
-            padding: 10px;
-            flex:1
+            position: absolute;
+            right:30px;
+            top:10px;   
+            padding: 5px;
+            &:hover > .search-text{
+                width: 240px;
+                padding: 0 6px;
+            }    
+             &:hover > .search-btn{
+                 background: $white;
+             }
+          
+            display: flex;
+            .search-text{
+                border:none;
+                background: none;
+                outline: none;
+            
+                color: $white;
+                font-size: 16px;
+                transition: all 0.4s ease-in-out;
+                line-height: 40px;
+                width: 0px;
+                float: left;
+               
+            }
+            .search-btn{
+                float: right;
+                color: #e84118;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                background: #2f3640;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            
         }
       
     }
@@ -78,7 +114,14 @@ header{
 }
 
 .sub-header{
-    background-color: rgb(37, 96, 173);
+    background-color: rgb(19, 62, 119);
+    transition: all 0.5s ease-in-out;
+    height: 500px;
+    &:hover{
+        height: 500px;
+
+    }
+   
    padding: .5rem 0;
    .image-icon{
        height: 40px;
@@ -87,12 +130,24 @@ header{
        align-items: center;
    }
   .sub-container{
+  
+    max-width: 800px;
+    margin: 0 auto;
+    
+  }
+  .sub-hour{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
   }
+  .sub-details{
+   margin-top:30px;
+   .sub-forcast{
+       text-align: center;
+   }
+   .display
+   color: $white;
+   }
   
     .sub-icons{
         display: flex;
