--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -155,13 +155,9 @@ header .weather .weather-header .summary {
   background-color: #133e77;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  height: 500px;
+  height: 400px;
   color: #fff;
   padding: .5rem 0;
-}
-
-.sub-header:hover {
-  height: 500px;
 }
 
 .sub-header .image-icon {
@@ -173,6 +169,9 @@ header .weather .weather-header .summary {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .sub-header .sub-container {
@@ -191,8 +190,30 @@ header .weather .weather-header .summary {
           align-items: center;
 }
 
+.sub-header .sub-hour .image-icon img {
+  width: 25px;
+}
+
+.sub-header .sub-hour .small-temp {
+  text-align: center;
+}
+
 .sub-header .sub-details {
   margin-top: 30px;
+}
+
+.sub-header .sub-details .daily-chart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+}
+
+.sub-header .sub-details .daily-chart .avg-temps {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: center;
 }
 
 .sub-header .sub-details .sub-forcast {
@@ -226,6 +247,85 @@ header .weather .weather-header .summary {
 
 .sub-header .sub-details .sub-icons .small-temp {
   color: #fff;
+}
+
+@media screen and (max-width: 500px) {
+  .sub-header {
+    padding: .5rem 0;
+  }
+  .sub-header .image-icon {
+    height: 30px;
+    width: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sub-header .image-icon img {
+    width: 30px;
+  }
+  .sub-header .sub-container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  .sub-header .sub-hour {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sub-header .sub-hour .small-temp {
+    text-align: center;
+  }
+  .sub-header .sub-details {
+    margin-top: 30px;
+  }
+  .sub-header .sub-details .daily-chart {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 1rem;
+  }
+  .sub-header .sub-details .daily-chart .avg-temps {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    text-align: center;
+  }
+  .sub-header .sub-details .sub-forcast {
+    padding: 0 1rem;
+  }
+  .sub-header .sub-details .display {
+    color: #fff;
+  }
+  .sub-header .sub-details .sub-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sub-header .sub-details .sub-icons .time {
+    color: #000000;
+    font-size: 12px;
+  }
+  .sub-header .sub-details .sub-icons .small-temp {
+    color: #fff;
+  }
 }
 
 body {
