--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,13 @@ header nav {
   position: relative;
 }
 
+header nav .errors {
+  position: absolute;
+  right: 30px;
+  top: 50px;
+  padding-top: .2rem;
+}
+
 header nav .search-box {
   height: 40px;
   border-radius: 40px;
@@ -118,7 +125,7 @@ header .weather .weather-header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 300px;
+  min-width: 300px;
 }
 
 header .weather .weather-header .city {
@@ -126,6 +133,14 @@ header .weather .weather-header .city {
   margin-bottom: 1rem;
   font-weight: 700;
   text-align: center;
+}
+
+header .weather .weather-header .header-hilo {
+  margin-top: .5rem;
+}
+
+header .weather .weather-header .header-hilo > span::after {
+  content: "\00B0";
 }
 
 header .weather .weather-header .temp-icon {
@@ -136,6 +151,7 @@ header .weather .weather-header .temp-icon {
 
 header .weather .weather-header .temp-icon .temp {
   font-size: 60px;
+  margin-left: .3rem;
   font-weight: 300;
 }
 
