--- a/src/styles/modules/_base.scss
+++ b/src/styles/modules/_base.scss
@@ -18,6 +18,11 @@ h1,h2,h4,h5,h6{
     margin: 0;
 }
 
+.Map{
+    width: 250px;
+    height: 250px;
+}
+
 .main-content{
     display: flex;
     flex-direction: column;
