--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -174,9 +174,11 @@ header{
        display: flex;
        justify-content: space-around;
        flex-wrap: wrap;
+       padding: 1rem;
        .sub-stats{
            display: flex;
            flex-direction: column;
+           width: 250px;
        }
    }
    .daily-chart{
@@ -218,8 +220,8 @@ header{
        
        padding: .5rem 0;
        .image-icon{
-           height: 30px;
-           width: 30px;
+           height: 40px;
+           width: 40px;
            display: flex;
            align-items: center;
            img{
