updated live api to secure and new server, cleaned up eslint warnings and errors

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -169,7 +169,7 @@ header .weather .weather-header .summary {
 }
 
 .sub-header {
-  background-color: #133e77;
+  background-color: #031935;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   height: 100%;
