--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -108,7 +108,7 @@ header .weather {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 110px;
+  margin-top: 150px;
 }
 
 header .weather .weather-header {
@@ -289,6 +289,147 @@ header .weather .weather-header .summary {
 }
 
 @media screen and (max-width: 500px) {
+  header {
+    height: 500px;
+  }
+  header nav {
+    margin-top: 1rem;
+    position: relative;
+  }
+  header nav .errors {
+    position: absolute;
+    right: 30px;
+    top: 100px;
+    padding-top: .2rem;
+  }
+  header nav .search-box {
+    height: 40px;
+    border-radius: 40px;
+    background: #2f3640;
+    position: absolute;
+    right: 30px;
+    top: 50px;
+    padding: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  header nav .search-box:hover > .search-text {
+    width: 240px;
+    padding: 0 6px;
+  }
+  header nav .search-box:hover > .search-btn {
+    background: #fff;
+  }
+  header nav .search-box .search-text {
+    border: none;
+    background: none;
+    outline: none;
+    color: #fff;
+    font-size: 16px;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    line-height: 40px;
+    width: 0px;
+    float: left;
+  }
+  header nav .search-box .search-btn {
+    float: right;
+    color: #e84118;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #2f3640;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .loader_parent {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 50vh;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  header .loader_parent .weather_loader {
+    margin-bottom: 30px;
+  }
+  header .loader_parent .loader-text {
+    font-size: 20px;
+    color: blanchedalmond;
+  }
+  header .weather {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 150px;
+  }
+  header .weather .weather-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-width: 300px;
+    max-width: 400px;
+  }
+  header .weather .weather-header .city {
+    font-size: 30px;
+    margin-bottom: 1rem;
+    font-weight: 700;
+    text-align: center;
+  }
+  header .weather .weather-header .header-hilo {
+    margin-top: .5rem;
+  }
+  header .weather .weather-header .header-hilo > span::after {
+    content: "\00B0";
+  }
+  header .weather .weather-header .temp-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  header .weather .weather-header .temp-icon .temp {
+    font-size: 60px;
+    margin-left: .5rem;
+    font-weight: 300;
+  }
+  header .weather .weather-header .temp-icon .temp::after {
+    content: "\2109";
+  }
+  header .weather .weather-header .temp-icon .weather-icon img {
+    width: 125px;
+  }
+  header .weather .weather-header .summary {
+    font-size: 25px;
+  }
   .sub-header {
     padding: .5rem 0;
   }
@@ -698,6 +839,10 @@ ul {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.daily .weather-list .rain > :first-child {
+  text-transform: capitalize;
 }
 
 .daily .weather-list .rain div {
