--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -75,7 +75,7 @@ header{
      .weather{
          display: flex;
          justify-content: center;
-         margin-top: 110px;
+         margin-top: 150px;
         .weather-header{
             display: flex;
             flex-direction: column;
@@ -215,6 +215,145 @@ header{
 }
 
 @media screen and (max-width:500px){
+
+
+    header{
+      
+      
+        height: 500px; 
+        nav{
+           .errors{
+               position: absolute;
+               right:30px;
+               top:100px;
+               padding-top:.2rem;
+           }
+            margin-top:1rem;
+            position: relative;
+            .search-box{
+     
+                height:40px;
+                border-radius: 40px;
+                background: #2f3640;
+                position: absolute;
+                right:30px;
+                top:50px;   
+                padding: 5px;
+                &:hover > .search-text{
+                    width: 240px;
+                    padding: 0 6px;
+                }    
+                 &:hover > .search-btn{
+                     background: $white;
+                 }
+              
+                display: flex;
+                .search-text{
+                    border:none;
+                    background: none;
+                    outline: none;
+                
+                    color: $white;
+                    font-size: 16px;
+                    transition: all 0.4s ease-in-out;
+                    line-height: 40px;
+                    width: 0px;
+                    float: left;
+                   
+                }
+                .search-btn{
+                    float: right;
+                    color: #e84118;
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 50%;
+                    background: #2f3640;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                
+            }
+          
+        }
+        .loader_parent{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 50vh;
+            flex-direction: column;
+            .weather_loader{
+                margin-bottom: 30px;
+            }
+            .loader-text{
+                font-size: 20px;
+                color: blanchedalmond;
+            }
+        }
+         .weather{
+             display: flex;
+             justify-content: center;
+             margin-top: 150px;
+            .weather-header{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                min-width:300px;
+                max-width: 400px;
+                .city{
+                   font-size: 30px;
+                   margin-bottom:1rem;
+                   font-weight: 700;
+                   text-align: center;
+                }
+                .header-hilo{
+                    margin-top:.5rem;
+                    > span{
+                        &::after{
+                            content:"\00B0";
+                          }
+                    }
+               
+                }
+                .temp-icon{
+                    display: flex;
+                    .temp{
+                      font-size:60px;
+                      margin-left:.5rem;
+                      font-weight: 300;
+                      &::after{
+                          content: "\2109";
+                      }
+                    }
+                    .weather-icon{
+                        img{
+                            width: 125px;
+                        }
+                    }
+                }
+                .summary{
+                    font-size: 25px;
+                }
+               
+               
+               
+                  
+              }
+    
+         }
+    
+    
+     
+    
+    }
+
+
+
+
+
+
+
     .sub-header{
       
        
