changed btn color

--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -45,7 +45,7 @@ header{
             }
             .search-btn{
                 float: right;
-                color: #e84118;
+                color: #020824;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
