--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,7 +59,7 @@ header nav .search-box .search-text {
 
 header nav .search-box .search-btn {
   float: right;
-  color: #e84118;
+  color: #020824;
   width: 30px;
   height: 30px;
   border-radius: 50%;
