--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -9,6 +9,7 @@ header{
            right:30px;
            top:50px;
            padding-top:.2rem;
+           color: rgb(100, 14, 14);
        }
         margin-top:1rem;
         position: relative;
@@ -45,7 +46,7 @@ header{
             }
             .search-btn{
                 float: right;
-                color: #020824;
+                color: #899cf1;
                 width: 30px;
                 height: 30px;
                 border-radius: 50%;
